v1.10.x/how-to-guides/mcp/claude.mdx
---
title: Getting Started with Claude Desktop
description: Set up MCP Server to connect Claude Desktop, generate tokens, and enable seamless AI-powered access to your data.
slug: /v1.10.x/how-to-guides/mcp/claude
sidebarTitle: Getting Started with Claude Desktop
---

# Getting Started with Claude Desktop

Configure OpenMetadata's MCP Server to interact with Anthropic's AI assistant platform.

## Prerequisites
For this guide, you will need:

- [nvm](https://github.com/nvm-sh/nvm) and npx/node version 22
- OpenMetadata v1.8.0 or later - You can upgrade your version of OpenMetadata with [this guide](https://docs.open-metadata.org/latest/deployment/upgrade)
- [Claude Desktop](https://claude.ai/download)
- OpenMetadata [MCP Application and Personal Access Token](https://docs.open-metadata.org/v1.9.x/how-to-guides/mcp#installing-mcp-server)

## Adding your OpenMetadata MCP Server to Claude Desktop
This how-to guide uses the free version of Claude Desktop for macOS with Sonnet 4.

- Navigate to Claude Desktop's Settings, then select *Developer* and *Edit Config*. Paste the following into `claude_desktop_config.json`

```
{"mcpServers": {
    "OpenMetadata": {
      "command": "npx",
      "args": [
        "-y",
        "mcp-remote",
        "<YOUR-OpenMetadata-SERVER>/mcp",
        "--auth-server-url=<YOUR-OpenMetadata-SERVER>/mcp",
        "--client-id=OpenMetadata",
        "--verbose",
        "--clean",
        "--header",
        "Authorization:${AUTH_HEADER}"
      ],
      "env": {
        "AUTH_HEADER": "Bearer <YOUR-OpenMetadata-PAT>"
      }
    }
  }
}
```

- Restart Claude Desktop. You should see your `OpenMetadata` service running

<img src="/public/images/how-to-guides/mcp/claude-settings.jpg" alt="Claude Settings" />

## Prompt to read from OpenMetadata
This part of the guide assumes that you have assets in OpenMetadata that Claude can read, and that some of your data assets have references to customers. You can change the prompt accordingly and/or add data sources into OpenMetadata [here](https://docs.open-metadata.org/latest/connectors).

Paste the following prompt into Claude to have it read from OpenMetadata:
```
Imagine you're a data analyst tasked with building a customer retention dashboard. Can you help me identify which tables or datasets in the OpenMetadata database might contain relevant information?
```

Claude will ask if it can use the external integration `OpenMetadata`, select *Allow always*. You may have to do this multiple times, once for each tool. Claude is now reading from OpenMetadata via its MCP Server!

<img src="/public/images/how-to-guides/mcp/claude-allow.jpg" alt="Allow Claude to use OpenMetadata" />

For more sample use cases with MCP please check out [our blog](https://collatedata.medium.com/mcp-sample-uses-in-collate-b7846864f63b)!

### Reach out on Slack!
With MCP, we are finding new ways to use OpenMetadata all the time! Now that you have Claude and OpenMetadata configured to work together, think you've got a great new use case? Show us what you've got in [Slack](https://slack.open-metadata.org/)!

